--- a/styles.scss
+++ b/styles.scss
@@ -1,29 +1,167 @@
-.cgs-dashboard-container {
-    margin: 20px;
-    display: flex;
-    gap: 1rem;
+$breakpoints: (phone: 640px,
+    tablet: 768px,
+    desktop: 1024px) !default;
 
-    // justify-items: center;
-    @media only screen and (max-width: 900px) {
-        flex-wrap: wrap;
+// .cgs-dashboard-containerr {
+//     margin: 20px;
+//     display: flex;
+//     gap: 1rem;
+
+//     // justify-items: center;
+//     @media only screen and (max-width: 900px) {
+//         flex-wrap: wrap;
+//     }
+
+//     .dash-area {
+//         border: 1px solid;
+//         border-radius: 14px;
+//         -webkit-box-shadow: 5px 5px 15px 5px #000000;
+//         box-shadow: 5px 5px 15px 5px #000;
+//         cursor: pointer;
+//         text-align: center;
+//         width: 100%;
+
+//         img {
+//             width: 12rem;
+//             vertical-align: inherit;
+//         }
+
+//     }
+// }
+
+.spinner2 {
+    height: 60px;
+    width: 60px;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    -webkit-animation: rotation .6s infinite linear;
+    -moz-animation: rotation .6s infinite linear;
+    -o-animation: rotation .6s infinite linear;
+    animation: rotation .6s infinite linear;
+    border-left: 6px solid rgba(0, 174, 239, .15);
+    border-right: 6px solid rgba(0, 174, 239, .15);
+    border-bottom: 6px solid rgba(0, 174, 239, .15);
+    border-top: 6px solid rgba(0, 174, 239, .8);
+    border-radius: 100%;
+}
+
+@-webkit-keyframes rotation {
+    from {
+        -webkit-transform: rotate(0deg);
     }
 
-    .dash-area {
-        border: 1px solid;
-        border-radius: 14px;
-        -webkit-box-shadow: 5px 5px 15px 5px #000000;
-        box-shadow: 5px 5px 15px 5px #000;
-        cursor: pointer;
-        text-align: center;
-        width: 100%;
-
-        img {
-            width: 12rem;
-            vertical-align: inherit;
-        }
-
+    to {
+        -webkit-transform: rotate(359deg);
     }
 }
+
+@-moz-keyframes rotation {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+
+    to {
+        -moz-transform: rotate(359deg);
+    }
+}
+
+@-o-keyframes rotation {
+    from {
+        -o-transform: rotate(0deg);
+    }
+
+    to {
+        -o-transform: rotate(359deg);
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(359deg);
+    }
+}
+
+#overlay {
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    // border-radius: 1rem;
+}
+
+.dash-card {
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+    height: 35vh;
+
+    .card-header {
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+    }
+
+    .chart {
+        border-radius: 0.3rem;
+    }
+}
+
+.backdrop {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.cgs-dashboard-modal {
+    position: fixed;
+    display: none;
+    z-index: 10001;
+    top: 20%;
+    left: 30%;
+    background: white;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+
+    .cgs-dashboard-modal__title {
+        text-align: center;
+        margin: 0 0 1rem 0;
+    }
+
+    .cgs-dashboard-modal__actions {
+        text-align: center;
+    }
+
+
+}
+
+.close-naplan,
+.pop-up-grade,
+.pop-up-effort {
+    float: right;
+    font-size: 1.3rem;
+    color: #66A8D8;
+    cursor: pointer;
+}
+
+
+.open {
+    display: block !important;
+}
+
+
 
 /* Attendance Report */
 
@@ -151,6 +289,11 @@ span#attendance-based-on-rollmarking-show {
 }
 
 // Grades and effort.
+.cgs-dashboard-academic-info-container {
+    display: grid;
+    grid-template-columns: 40% auto;
+    row-gap: 20px;
+}
 
 .graph-containers {
     display: flex;
@@ -171,7 +314,184 @@ span#attendance-based-on-rollmarking-show {
     }
 }
 
+.cgs-dashboard-academic-report-container {
+    width: 99%;
+    // height: 35vh;
+    overflow: hidden;
+    border: 1px solid gray;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    grid-row-start: 1;
+    grid-row-end: 3;
+
+    .my-custom-scrollbar {
+        position: relative;
+        height: 500px;
+        overflow: auto;
+    }
+
+    .table-wrapper-scroll-y {
+        display: inline-block;
+        // height: 10rem;
+    }
+
+    img.file-pdf {
+        max-height: 25px;
+        cursor: pointer;
+    }
+
+
+}
+
+#searchReportInput,
+#searchByClassGradeInput,
+#searchByClassEffortInput {
+    background-image: url([[pix:report_mystudent|searchicon]]); // url('/css/searchicon.png'); /* Add a search icon to input */
+    background-position: 10px 12px;
+    /* Position the search icon */
+    background-repeat: no-repeat;
+    /* Do not repeat the icon image */
+    width: 100%;
+    /* Full-width */
+    font-size: 16px;
+    /* Increase font-size */
+    padding: 12px 20px 12px 40px;
+    /* Add some padding */
+    border: 1px solid #ddd;
+    /* Add a grey border */
+    margin-bottom: 12px;
+    /* Add some space below the input */
+}
+
+#effort-history-table {
+    height: 11rem;
+}
+
+.grade-history-table {
+    width: 100%;
+    height: 17vh;
+}
+
+.cgs-assignments-container {
+    grid-column-end: 3;
+    grid-column-start: 1;
+    height: 35vh;
+    border: 1px solid gray;
+    border-radius: .5rem;
+    padding: 1rem;
+}
+
+.history-title {
+    display: inline;
+}
+
+.pop-up-history {
+    float: right;
+    cursor: pointer;
+}
+
+// Pop up grade/ effort history to see the entire table
+
+.report-my-student-modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place modal-history-background .cgs-grade-history-container*/
+    z-index: 1000;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* The Modal (background) */
+.modal-history-background {
+    // display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place modal-history-background .cgs-grade-history-container*/
+    z-index: 1000;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+
+    .cgs-grade-history-container {
+        height: 100%;
+
+        .grades-his {
+            height: 80%;
+        }
+
+        #grade-history-table {
+            height: 80%;
+        }
+
+    }
+
+    .cgs-effort-history-container {
+        height: 100%;
+
+        .effort-his {
+            height: 80%;
+        }
+
+        #effort-history-table {
+            height: 80%;
+        }
+    }
+}
+
+/* Modal Content/Box */
+.modal-history-content,
+.modal-report-my-student-content {
+    background-color: #fefefe;
+    margin: 4% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.modal-history-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.modal-history-close:hover,
+.modal-history-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 // NAPLAN
+
+.modal-report-my-student-content {
+    text-align: center;
+    width: fit-content;
+}
 
 .cgs-dashboard-naplan-container {
 
@@ -236,10 +556,34 @@ a.chart-action {
 
 .cgs-dashboard-gandeffort-table {
     @extend .cgs-dashboard-attendance-table;
-    width: 100%;
+    min-width: 100%;
 }
 
+.cgs-grade-history-container {
 
+    // height: 35vh;
+    height: 99%;
+    overflow: hidden;
+    border: 1px solid gray;
+    border-radius: .5rem;
+    padding: 1rem;
+
+}
+
+.cgs-effort-main-container {
+    grid-column-end: 3;
+    grid-column-start: 2;
+}
+
+.cgs-effort-history-container {
+
+    // height: 35vh;
+    height: 99%;
+    overflow: hidden;
+    border: 1px solid gray;
+    border-radius: .5rem;
+    padding: 1rem;
+}
 
 span#history-show {
     display: none;
@@ -261,6 +605,22 @@ tr.reports-heading {
     text-align: center;
     background-color: lightgrey;
 }
+
+
+@media (max-width: 900px) {
+    .cgs-dashboard-academic-report-container {
+        width: 100%;
+    }
+
+    .cgs-dashboard-academic-report-container,
+    .cgs-grade-main-container,
+    .cgs-effort-main-container,
+    .cgs-assignments-container {
+        grid-column-end: 3;
+        grid-column-start: 1;
+    }
+}
+
 
 
 /*<a href="https://www.flaticon.com/free-icons/attendance" title="attendance icons">Attendance icons created by Flat Icons - Flaticon</a>*/
