--- a/templates/cgsdashboard.mustache
+++ b/templates/cgsdashboard.mustache
@@ -1,21 +1,78 @@
-<div class = 'cgs-dashboard-container'>
-   <div class = 'dash-area' onclick="location.href='{{{atturl}}}';">
-      <h1>{{att}}</h1>
-      <img src="{{attsrc}}" alt="{{att}}">
-   </div>
-   <div class = 'dash-area' onclick="location.href='https://www.google.com';">
-      <h1>{{acc}}</h1>
-      <img src="{{academic}}" alt="{{acc}}">    
-   </div>
-   <div class = 'dash-area' onclick="location.href='{{{geurl}}}';">
-      <h1>Grades - Effort</h1>
-      <img src="{{gestr}}" alt="{{gr}}">    
-   </div>
-   <div class = 'dash-area dash-area-naplan' onclick="location.href='{{{napurl}}}';">
-      <h1>{{nap}}</h1>
-      <br>
-      <br>
-      <img src="{{naplan}}" alt="{{nap}}">      
-   </div>
+{{!
+    This file is part of Moodle - http://moodle.org/
+
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Moodle. If not, see
+    <http: //www.gnu.org/licenses />.
+
+    @package report_mystudent
+    @copyright 2022 Veronica Bermegui
+    @license http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
+}}
+
+<div id="myModal" class="report-my-student-modal">
+  <!-- Modal content -->
+  <div class="modal-report-my-student-content">
+   <span class ='close-naplan' title = "Close"><i class="fa fa-window-close cgs-naplan-close" aria-hidden="true"></i></span>
+    <img src="https://www.nap.edu.au/_resources/common_scales_image_file.png" alt="NAPLAN scale" > 
+  </div>
+
+</div>
+<div class="card-deck" data-username = "{{username}}" data-campus = "{{campus}}" data-userid = "{{{userid}}}">
+  <div class="card">
+    <div class="card-img-top card-img-attendance">
+     {{> report_mystudent/spinner}}
+        <div class="chart">
+            <canvas id="chart-attendance" class="chart-canvas"></canvas>
+        </div>
+    </div>
+    <div class="card-body card-body-attendance">
+      <h5 class="card-title">Attendance {{currentyear}}</h5>
+      <p class="card-text"></p>
+    </div>
+    <div class="card-footer">
+      <h6 class="text-muted"><a href = '{{{atturl}}}' target = '_blank'>More details</a></h6>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-img-top card-img-academic">
+    {{> report_mystudent/spinner}}
+        <div class="chart">
+            <canvas id="chart-academic" class="chart-canvas"></canvas>
+        </div>
+    </div>
+    <div class="card-body card-body-academic-info">
+      <h5 class="card-title">Academic info</h5>
+      <p class="card-text"></p>
+    </div>
+    <div class="card-footer">
+      <h6 class="text-muted"><a href = '{{{accurl}}}' target = '_blank'>More details</a></h6>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-img-top card-top-naplan">
+    {{> report_mystudent/spinner}}
+        <div class="chart" >
+            <canvas id="chart-naplan" class="chart-canvas"></canvas>
+        </div>
+    </div>
+    <div class="card-body card-body-naplan">
+      <h5 class="card-title">NAPLAN</h5>
+      <p class="card-text"></p>
+    </div>
+    <div class="card-footer">
+      <h6 class="text-muted"><a class = "naplan-scale" href = '#'>NAPLAN scales</a></h6>
+    </div>
+  </div>
 </div>
 
