--- a/templates/cgsdashboard.mustache
+++ b/templates/cgsdashboard.mustache
@@ -38,7 +38,7 @@
     </div>
     <div class="card-body card-body-attendance">
       <h5 class="card-title">Attendance {{currentyear}}</h5>
-      <p class="card-text"></p>
+      <p class="card-text" id = "card-body-attendance-info-text"></p>
     </div>
     <div class="card-footer">
       <h6 class="text-muted"><a href = '{{{atturl}}}' target = '_blank'>More details</a></h6>
@@ -53,7 +53,7 @@
     </div>
     <div class="card-body card-body-academic-info">
       <h5 class="card-title">Academic info</h5>
-      <p class="card-text"></p>
+      <p class="card-text" id = "card-body-academic-info-text"></p>
     </div>
     <div class="card-footer">
       <h6 class="text-muted"><a href = '{{{accurl}}}' target = '_blank'>More details</a></h6>
@@ -68,7 +68,7 @@
     </div>
     <div class="card-body card-body-naplan">
       <h5 class="card-title">NAPLAN</h5>
-      <p class="card-text"></p>
+      <p class="card-text" id= "card-body-naplan-text"></p>
     </div>
     <div class="card-footer">
       <h6 class="text-muted"><a class = "naplan-scale" href = '#'>NAPLAN scales</a></h6>
