--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@
 }
 
 /* Attendance Report */
-.cgs-dashboard-attendance-table, .cgs-dashboard-gandeffort-table {
+.cgs-dashboard-attendance-table, .cgs-dashboard-gandeffort-table, .assignment-table, .cgs-academic-cgs-activities {
   border-collapse: separate;
   border-spacing: 0;
   min-width: 350px;
@@ -120,44 +120,48 @@
   /* bottom-right border-radius */
 }
 
-.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th,
+.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th, .assignment-table tr th, .cgs-academic-cgs-activities tr th,
 .cgs-dashboard-attendance-table tr td,
-.cgs-dashboard-gandeffort-table tr td {
+.cgs-dashboard-gandeffort-table tr td,
+.assignment-table tr td,
+.cgs-academic-cgs-activities tr td {
   border-right: 1px solid #66A8D8;
   border-bottom: 1px solid #66A8D8;
   padding: 5px;
 }
 
-.cgs-dashboard-attendance-table tr th:first-child, .cgs-dashboard-gandeffort-table tr th:first-child,
+.cgs-dashboard-attendance-table tr th:first-child, .cgs-dashboard-gandeffort-table tr th:first-child, .assignment-table tr th:first-child, .cgs-academic-cgs-activities tr th:first-child,
 .cgs-dashboard-attendance-table tr td:first-child,
-.cgs-dashboard-gandeffort-table tr td:first-child {
+.cgs-dashboard-gandeffort-table tr td:first-child,
+.assignment-table tr td:first-child,
+.cgs-academic-cgs-activities tr td:first-child {
   border-left: 1px solid #66A8D8;
 }
 
-.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th {
+.cgs-dashboard-attendance-table tr th, .cgs-dashboard-gandeffort-table tr th, .assignment-table tr th, .cgs-academic-cgs-activities tr th {
   background: #66A8D8;
   border-top: 1px solid #66A8D8;
   text-align: center;
   color: white;
 }
 
-.cgs-dashboard-attendance-table tr:first-child th:first-child, .cgs-dashboard-gandeffort-table tr:first-child th:first-child {
+.cgs-dashboard-attendance-table tr:first-child th:first-child, .cgs-dashboard-gandeffort-table tr:first-child th:first-child, .assignment-table tr:first-child th:first-child, .cgs-academic-cgs-activities tr:first-child th:first-child {
   border-top-left-radius: 6px;
 }
 
-.cgs-dashboard-attendance-table tr:first-child th:last-child, .cgs-dashboard-gandeffort-table tr:first-child th:last-child {
+.cgs-dashboard-attendance-table tr:first-child th:last-child, .cgs-dashboard-gandeffort-table tr:first-child th:last-child, .assignment-table tr:first-child th:last-child, .cgs-academic-cgs-activities tr:first-child th:last-child {
   border-top-right-radius: 6px;
 }
 
-.cgs-dashboard-attendance-table tr:last-child td:first-child, .cgs-dashboard-gandeffort-table tr:last-child td:first-child {
+.cgs-dashboard-attendance-table tr:last-child td:first-child, .cgs-dashboard-gandeffort-table tr:last-child td:first-child, .assignment-table tr:last-child td:first-child, .cgs-academic-cgs-activities tr:last-child td:first-child {
   border-bottom-left-radius: 6px;
 }
 
-.cgs-dashboard-attendance-table tr:last-child td:last-child, .cgs-dashboard-gandeffort-table tr:last-child td:last-child {
+.cgs-dashboard-attendance-table tr:last-child td:last-child, .cgs-dashboard-gandeffort-table tr:last-child td:last-child, .assignment-table tr:last-child td:last-child, .cgs-academic-cgs-activities tr:last-child td:last-child {
   border-bottom-right-radius: 6px;
 }
 
-.cgs-dashboard-attendance-table th, .cgs-dashboard-gandeffort-table th {
+.cgs-dashboard-attendance-table th, .cgs-dashboard-gandeffort-table th, .assignment-table th, .cgs-academic-cgs-activities th {
   font-size: 1.1rem;
 }
 
@@ -336,7 +340,7 @@ span#attendance-based-on-rollmarking-show {
   grid-column-end: 3;
   -ms-grid-column: 1;
       grid-column-start: 1;
-  height: 35vh;
+  height: auto;
   border: 1px solid gray;
   border-radius: .5rem;
   padding: 1rem;
@@ -512,6 +516,10 @@ a.chart-action {
   min-width: 100%;
 }
 
+.assignment-table {
+  min-width: 100%;
+}
+
 .cgs-grade-history-container {
   height: 99%;
   overflow: hidden;
@@ -553,6 +561,27 @@ td.assess-heading {
 tr.reports-heading {
   text-align: center;
   background-color: lightgrey;
+}
+
+.cgs-academic-cgs-activities table.feedbackfilestv tr,
+.cgs-academic-cgs-activities table.feedbackfilestv td,
+.cgs-academic-cgs-activities table.feedbackfilestv th {
+  border: none;
+}
+
+.cgs-submission-text {
+  text-align: end;
+}
+
+.feedbackcomment-modal-content {
+  max-height: 20vh;
+  overflow: hidden;
+}
+
+.feedbackcomment-modal-content .feedbackcomment-modal-content-expanded {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 @media (max-width: 900px) {
