--- a/styles.scss
+++ b/styles.scss
@@ -66,7 +66,7 @@ $breakpoints: (phone: 640px,
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(128, 125, 125, 0.5);
     z-index: 2;
     // border-radius: 1rem;
 }
@@ -429,6 +429,7 @@ span#attendance-based-on-rollmarking-show {
 
         #effort-history-table {
             height: 80%;
+            width: inherit;
         }
     }
 }
@@ -604,6 +605,7 @@ tr.reports-heading {
 .feedbackcomment-modal-content {
     max-height: 20vh;
     overflow: hidden;
+
     .feedbackcomment-modal-content-expanded {
         height: fit-content;
     }
@@ -621,6 +623,19 @@ tr.reports-heading {
     .cgs-assignments-container {
         grid-column-end: 3;
         grid-column-start: 1;
+    }
+
+    .modal-history-content,
+    .modal-report-my-student-content {
+        background-color: #fefefe;
+        margin: 50% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+    
+    .modal-report-my-student-content img {
+        width: inherit;
     }
 }
 
