--- a/templates/academic/academic_assignments_table.mustache
+++ b/templates/academic/academic_assignments_table.mustache
@@ -38,7 +38,7 @@ along with Moodle. If not, see
     <tbody>
         {{#assessments}}
              {{#details}}
-                <tr class="table-primary">
+                <tr class="table-assignment-term-tr">
                     <td class= "text-center">
                         <b>{{term}}</b>
                     </td>
