--- a/templates/academic/academic_effort_history_senior.mustache
+++ b/templates/academic/academic_effort_history_senior.mustache
@@ -35,15 +35,15 @@ along with Moodle. If not, see
 
         </thead>
         <tbody>
-            <tr class="text-center">
-                <th></th>
+            <tr class="text-center reports-heading">
+                <td></td>
                 {{#years_effort}}
                 {{#labels}}
                 {{#termlabels}}
-                <th>{{t1}}</th>
-                <th>{{t2}}</th>
-                <th>{{t3}}</th>
-                <th>{{t4}}</th>
+                <td>{{t1}}</td>
+                <td>{{t2}}</td>
+                <td>{{t3}}</td>
+                <td>{{t4}}</td>
                 {{/termlabels}}
                 {{/labels}}
                 {{/years_effort}}
