--- a/styles.scss
+++ b/styles.scss
@@ -68,7 +68,6 @@ $breakpoints: (phone: 640px,
     bottom: 0;
     background-color: rgba(128, 125, 125, 0.5);
     z-index: 2;
-    // border-radius: 1rem;
 }
 
 .dash-card {
@@ -129,12 +128,9 @@ $breakpoints: (phone: 640px,
     cursor: pointer;
 }
 
-
 .open {
     display: block !important;
 }
-
-
 
 /* Attendance Report */
 
@@ -154,10 +150,11 @@ $breakpoints: (phone: 640px,
     tr th:first-child,
     tr td:first-child {
         border-left: 1px solid #66A8D8;
+        border-left: 1px solid #66A8D8;
     }
 
     tr th {
-        background: #66A8D8;
+        background: #005892;
         border-top: 1px solid #66A8D8;
         text-align: center;
         color: white;
@@ -295,7 +292,7 @@ span#attendance-based-on-rollmarking-show {
     border-radius: 0.5rem;
     padding: 1rem;
     grid-row-start: 1;
-    grid-row-end: 3;
+    // grid-row-end: 3;
 
     .my-custom-scrollbar {
         position: relative;
@@ -312,8 +309,10 @@ span#attendance-based-on-rollmarking-show {
         max-height: 25px;
         cursor: pointer;
     }
-
-
+    
+}
+#reports-table  thead  th{
+    background-color: #005892;
 }
 
 #searchReportInput,
@@ -337,12 +336,19 @@ span#attendance-based-on-rollmarking-show {
 }
 
 #effort-history-table {
-    height: 11rem;
+    text-align: left;
 }
 
 .grade-history-table {
     width: 100%;
-    height: 17vh;
+    height: 66vh;
+}
+
+.my-student-dummy-area-heading {
+    background-color: #005892;
+    color: white;
+    font-weight: bold;
+    border-right: 0px !important;
 }
 
 .cgs-assignments-container {
@@ -352,6 +358,10 @@ span#attendance-based-on-rollmarking-show {
     border: 1px solid gray;
     border-radius: .5rem;
     padding: 1rem;
+}
+
+.table-assignment-term-tr {
+    background-color: lightgray;
 }
 
 .history-title {
@@ -531,6 +541,12 @@ a.chart-action {
 .cgs-dashboard-gandeffort-table {
     @extend .cgs-dashboard-attendance-table;
     min-width: 100%;
+    tr.reports-heading th {
+        background-color: #005892;
+        border: 0px solid #005892;
+        /* border-top-left-radius: 58px; */
+    }
+
 }
 
 .assignment-table {
@@ -550,8 +566,8 @@ a.chart-action {
 }
 
 .cgs-effort-main-container {
+    grid-column-start: 1;
     grid-column-end: 3;
-    grid-column-start: 2;
 }
 
 .cgs-effort-history-container {
@@ -562,6 +578,8 @@ a.chart-action {
     border: 1px solid gray;
     border-radius: .5rem;
     padding: 1rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 span#history-show {
@@ -572,10 +590,6 @@ span#effort-show {
     display: none;
 }
 
-td.area-heading {
-    background-color: #66A8D8;
-}
-
 td.assess-heading {
     text-align: right;
 }
@@ -583,7 +597,12 @@ td.assess-heading {
 tr.reports-heading {
     text-align: center;
     background-color: lightgrey;
+
+    th {
+         background-color:#005892;
+    }
 }
+
 
 .cgs-academic-cgs-activities {
     @extend .cgs-dashboard-attendance-table;
@@ -598,8 +617,6 @@ tr.reports-heading {
 
 .cgs-submission-text {
     text-align: end;
-    // height: 46vh;
-    // overflow: hidden;
 }
 
 .feedbackcomment-modal-content {
@@ -633,15 +650,8 @@ tr.reports-heading {
         border: 1px solid #888;
         width: 80%;
     }
-    
+
     .modal-report-my-student-content img {
         width: inherit;
     }
 }
-
-
-
-/*<a href="https://www.flaticon.com/free-icons/attendance" title="attendance icons">Attendance icons created by Flat Icons - Flaticon</a>*/
-/* <a href="https://www.flaticon.com/free-icons/grade" title="grade icons">Grade icons created by Smashicons - Flaticon</a> */
-/* <a href="https://www.flaticon.com/free-icons/school" title="school icons">School icons created by Freepik - Flaticon</a> */
-/* <a href="https://www.flaticon.com/free-icons/grade" title="grade icons">Grade icons created by Freepik - Flaticon</a> */
