Hide block from profiles tht dont have information

--- a/templates/academic/academic_effort_history_primary.mustache
+++ b/templates/academic/academic_effort_history_primary.mustache
@@ -31,7 +31,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="reports-heading">
                 {{#reports}}
                 {{#repos}}
                     <td>{{report}}</td>
@@ -42,7 +42,7 @@
             {{#learningareas}}
            
             <tr>
-                <td  class="area-heading">{{area}}</td>
+                <td>{{area}}</td>
                 {{#grades}} 
                
                     <td { style="text-align: center; background-color: {{bgcolour}}; "
