--- a/styles.css
+++ b/styles.css
@@ -248,8 +248,8 @@ span#attendance-based-on-rollmarking-show {
 .cgs-dashboard-academic-info-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 40% auto;
-      grid-template-columns: 40% auto;
+  -ms-grid-columns: 50%;
+      grid-template-columns: 50%;
   row-gap: 20px;
 }
 
@@ -543,7 +543,7 @@ a.chart-action {
 }
 
 .cgs-grade-history-container {
-  height: 99%;
+  height: 100%;
   overflow: hidden;
   border: 1px solid gray;
   border-radius: .5rem;
