Fix on strings and navigation

--- a/styles.scss
+++ b/styles.scss
@@ -305,7 +305,7 @@ span#attendance-based-on-rollmarking-show {
     }
 
     .table-wrapper-scroll-y {
-        display: inline-block;
+        // display: inline-block;
         // height: 10rem;
     }
 
